--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -152,8 +152,17 @@
                 android:layout_height="wrap_content" />
         </RelativeLayout>
 
-        <RelativeLayout
+        <android.support.v7.widget.RecyclerView
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/image_section"
+            android:id="@+id/all_post_tags"
+            android:gravity="center"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"/>
+        <RelativeLayout
+            android:layout_below="@+id/all_post_tags"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/relLayout1">
