--- a/app/src/main/res/layout/layout_stories_view.xml
+++ b/app/src/main/res/layout/layout_stories_view.xml
@@ -6,27 +6,8 @@
     android:layout_height="match_parent">
 
 
-    <RelativeLayout
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_marginTop="50dp"
-            android:background="@color/neartagtheme"
-            android:id="@+id/story_text"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            />
-        <ImageView
-            android:layout_below="@+id/story_text"
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@null"
-            />
 
-    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,4 +35,28 @@
         android:layout_height="3dp"
         android:layout_gravity="top"
         android:layout_marginTop="8dp" />
+
+    <RelativeLayout
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_marginTop="50dp"
+            android:background="@color/neartagtheme"
+            android:id="@+id/story_text"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            />
+        <ImageView
+            android:layout_below="@+id/story_text"
+            android:id="@+id/image"
+            android:adjustViewBounds="true"
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            />
+
+    </RelativeLayout>
 </RelativeLayout>
