--- a/app/src/main/res/layout/story_card_view.xml
+++ b/app/src/main/res/layout/story_card_view.xml
@@ -30,10 +30,10 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         card_view:cardCornerRadius="15dp"
         card_view:cardElevation="16dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="20dp"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -43,7 +43,7 @@
             <ImageView
                 android:id="@+id/center_image"
                 android:adjustViewBounds="true"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
             <RelativeLayout
                 android:layout_below="@+id/center_image"
