--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,15 +6,34 @@
     <color name="colorWhite">#FFFFFF</color>
 
     <color name="grey">#bfbfbf</color>
-    <color name="white">#fff</color>
-    <color name="black">#000000</color>
+
+
     <color name="link_blue">#4d94ff</color>
     <color name="darkRed">#cc0000</color>
-    <color name="orange">#FF3400</color>
     <color name="colorLine">#dfdfdf</color>
     <color name="neartagtheme">#f7e9e1</color>
     <color name="neartagtextcolor">#4a4a4a</color>
     <color name="bordercolor">#979797</color>
     <color name="texthintcolor">#9a8989</color>
     <color name="next_button_bg">#ff5412</color>
+
+    <color name="red1">#af0a0a</color>
+    <color name="red2">#c40909</color>
+    <color name="red3">#e50909</color>
+    <color name="orange1">#FF8333</color>
+    <color name="green1">#29CF40</color>
+    <color name="blue1">#66a3ff</color>
+    <color name="blue2">#0033cc</color>
+    <color name="linkBlue">#4d94ff</color>
+    <color name="blue3">#00c4cc</color>
+    <color name="blue4">#00aab1</color>
+    <color name="blue5">#007f85</color>
+    <color name="White">#fff</color>
+    <color name="darkGrey">#a6a6a6 </color>
+    <color name="Grey">#c3c3c3 </color>
+    <color name="lightGrey">#f2f2f2 </color>
+    <color name="transparentGrey">#21737373 </color>
+    <color name="darkTransparentGrey">#a0737373 </color>
+    <color name="DarkGrey">#737373 </color>
+    <color name="Black">#000 </color>
 </resources>
