--- a/app/src/main/res/drawable/circular_border_comment.xml
+++ b/app/src/main/res/drawable/circular_border_comment.xml
@@ -10,11 +10,10 @@
     <padding android:left="2dp"
         android:top="10dp"
         android:right="2dp"
-        android:bottom="10dp"
+        android:bottom="0dp"
         />
 
-    <corners android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
+    <corners
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"/>
 </shape>
