--- a/app/src/main/res/layout/layout_stories_view.xml
+++ b/app/src/main/res/layout/layout_stories_view.xml
@@ -27,17 +27,8 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-    <jp.shts.android.storiesprogressview.StoriesProgressView
-        android:id="@+id/stories"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_gravity="top"
-        android:layout_marginTop="8dp" />
 
     <RelativeLayout
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -51,12 +42,23 @@
         <ImageView
             android:layout_below="@+id/story_text"
             android:id="@+id/image"
+            android:layout_centerInParent="true"
             android:adjustViewBounds="true"
-
+            android:scaleType="fitXY"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:contentDescription="@null"
             />
 
     </RelativeLayout>
+
+    <jp.shts.android.storiesprogressview.StoriesProgressView
+        android:id="@+id/stories"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_gravity="top"
+        android:layout_marginTop="8dp" />
+
 </RelativeLayout>
