--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -343,6 +343,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginLeft="@dimen/stillshot_widget_margin_sides_bottom"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="@dimen/cam_widget_margin_bottom"
             android:animateLayoutChanges="true"
             android:id="@+id/image_switch_container">
@@ -355,14 +356,14 @@
 
                 <ImageButton
                     android:id="@+id/share"
-                    android:layout_width="44dp"
-                    android:layout_height="44dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:background="@drawable/cam_grey_circle_selector"
                     android:padding="@dimen/cam_content_inset_secondary"
                     android:scaleType="fitXY"
-                    android:src="@drawable/ic_story_share"
+                    android:src="@drawable/share_story"
                     tools:ignore="ContentDescription"
                     />
 
