--- a/app/src/main/res/layout/fragment_show_contacts.xml
+++ b/app/src/main/res/layout/fragment_show_contacts.xml
@@ -30,6 +30,13 @@
             android:src="@drawable/find_icon"
             android:layout_height="wrap_content" />
     </RelativeLayout>
+    <ProgressBar
+        android:id="@+id/busy_load"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contacts_list"
         android:layout_below="@+id/title"
