--- a/app/src/main/res/layout/snippet_app_header.xml
+++ b/app/src/main/res/layout/snippet_app_header.xml
@@ -38,8 +38,9 @@
                         android:layout_centerVertical="true"
                         android:layout_height="wrap_content" />
                 </RelativeLayout>
-                <ImageView
-                    android:layout_alignParentRight="true"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="20dp"
@@ -56,11 +57,37 @@
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:visibility="invisible"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentLeft="true"
                     android:gravity="center_horizontal"
                     android:layout_centerVertical="true"
                     android:background="@drawable/blank_circular_profile"
                     />
+
+                <TextView
+                    android:id="@+id/header_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="All Stories"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_centerInParent="true"
+                    />
+                <ImageView
+                    android:layout_toRightOf="@+id/header_title"
+                    android:layout_centerVertical="true"
+                    android:layout_width="30dp"
+                    android:src="@drawable/arrow_down"
+                    android:layout_height="30dp" />
+                <ImageView
+                    android:layout_marginEnd="20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/find_icon"
+                    android:layout_centerVertical="true"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
 
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
