--- a/app/src/main/res/layout/fragment_camera2.xml
+++ b/app/src/main/res/layout/fragment_camera2.xml
@@ -373,4 +373,20 @@
 
     </RelativeLayout>
 
+    <ImageButton
+        android:id="@+id/image_selection"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center"
+        android:background="@drawable/cam_grey_circle_selector"
+        android:padding="@dimen/cam_content_inset_secondary"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_gallery"
+        tools:ignore="ContentDescription"
+        />
+
 </RelativeLayout>
