--- a/app/src/main/res/layout/story_card_view.xml
+++ b/app/src/main/res/layout/story_card_view.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:background="#F2F2F2"
-    android:visibility="visible"
+    android:visibility="invisible"
     android:gravity="center_horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
