--- a/app/src/main/res/layout/fragment_select_channel.xml
+++ b/app/src/main/res/layout/fragment_select_channel.xml
@@ -13,9 +13,17 @@
     <RelativeLayout
         android:id="@+id/title"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:id="@+id/left"
+            android:src="@drawable/ic_backarrow"
+            android:layout_height="wrap_content" />
         <TextView
+            android:layout_toRightOf="@+id/left"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:textStyle="bold"
@@ -23,13 +31,7 @@
             android:textColor="@color/black"
             android:textSize="15sp"
             android:layout_width="wrap_content"
-            android:text="SELECTED PEOPLE"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="20dp"
-            android:layout_width="wrap_content"
-            android:src="@drawable/find_icon"
+            android:text="SELECTE CHANNEL NAME"
             android:layout_height="wrap_content" />
     </RelativeLayout>
     <ProgressBar
@@ -40,13 +42,24 @@
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/contacts_list"
+        android:id="@+id/selected_contacts_list"
         android:layout_below="@+id/title"
         android:layout_marginTop="10dp"
         layout_above="@id/create_content_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
+    <EditText
+        android:id="@+id/channel_name"
+        android:layout_width="match_parent"
+        android:background="@drawable/layout_bg_circular"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        android:hint="write a name for this channel"
+        android:textColorHint="@color/neartagtextcolor"
+        android:focusable="true"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content" />
     <RelativeLayout
         android:id="@+id/create_content_container"
         android:background="@color/link_blue"
