--- a/app/src/main/res/layout/snippet_contacts_selected_view.xml
+++ b/app/src/main/res/layout/snippet_contacts_selected_view.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="60dp"
+    android:layout_margin="5dp"
     android:layout_height="wrap_content">
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
+        android:layout_centerHorizontal="true"
         android:id="@+id/profile_photo"
         android:src="@drawable/profile_short_link"
         android:layout_height="50dp" />
     <TextView
-        android:layout_toRightOf="@+id/profile_photo"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/profile_photo"
         android:layout_width="wrap_content"
         android:id="@+id/name"
         android:textColor="@color/black"
-        android:textSize="15dp"
+        android:textSize="12dp"
         android:layout_centerVertical="true"
         android:text="Ashutosh Kr. Dubey"
-        android:layout_height="wrap_content" />
-    <ImageView
-        android:id="@+id/contact_selected"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_width="wrap_content"
-        android:src="@drawable/select_contact_clear"
         android:layout_height="wrap_content" />
 </RelativeLayout>
