--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -1,59 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/neartagtheme"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignBottom="@id/description"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        app:srcCompat="@drawable/instahelo_text_original" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold"
-        android:textSize="48sp"
-        android:textColor="@color/next_button_bg"
         android:gravity="center_horizontal"
-        android:text="#InstaHelo"
-        />
+        android:textColor="@color/next_button_bg"
+        android:textSize="48sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/home_page_icons" />
+
     <TextView
-        android:layout_below="@+id/title"
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@color/black"
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:text="थोड़ा गप्प शप्प हो जाये !"
-        android:layout_centerHorizontal="true"
-        android:textStyle="bold"
-        />
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
-    <ImageView
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="35dp"
-        android:layout_below="@+id/description"
-        android:layout_width="match_parent"
-        android:src="@drawable/home_page_icons"
-        android:layout_marginBottom="20dp"
-        android:layout_height="match_parent" />
     <TextView
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
         android:id="@+id/get_started"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/getstartedoval"
-        android:text="@string/getstarted"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
         android:fontFamily="Helvetica-Bold"
         android:gravity="center_horizontal"
         android:paddingLeft="50dp"
-        android:textSize="24sp" />
+        android:text="@string/getstarted"
+        android:textColor="#ffffff"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
